--- a/_angular-app/src/app/components/pages/login/login.component.html
+++ b/_angular-app/src/app/components/pages/login/login.component.html
@@ -1,9 +1,12 @@
+<div style="margin-top: 15px" class="col col-md-4 offset-4" *ngIf="showMessageError">
+  <alert-error [(show)]="showMessageError">Credenciais inválidas</alert-error>
+</div>
+
 <form class="form-signin" (submit)="submit()">
   <h1 class="h3 mb-3 font-weight-normal">Code Shopping - Login</h1>
   <label for="email" class="sr-only">E-mail</label>
   <input name="email" [(ngModel)]="credentials.email"  type="email" id="email" class="form-control" placeholder="Digite o e-mail" required autofocus>
   <label for="password" class="sr-only">Password</label>
-  <input type="password" id="password" name="password" [(ngModel)]="credentials.password" class="form-control" placeholder="Digite sei email" required>
+  <input type="password" id="password" name="password" [(ngModel)]="credentials.password" class="form-control" placeholder="Digite sua senha" required>
   <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
-  {{ token }}
 </form>
