--- a/_angular-app/src/app/components/pages/category/category-delete-modal/category-delete-modal.component.html
+++ b/_angular-app/src/app/components/pages/category/category-delete-modal/category-delete-modal.component.html
@@ -5,6 +5,6 @@
   </div>
   <div modal-footer>
     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-    <button type="button" class="btn btn-danger"  (click)="destroy()" )>Excluir</button>
+    <button type="button" class="btn btn-danger"  (click)="destroy()">Excluir</button>
   </div>
 </modal>
