--- a/_angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/_angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -1,10 +1,11 @@
 <div class="row">
+
   <h1>Listagem de categorias</h1>
   <table class="table table-striped">
     <thead>
       <tr>
         <td colspan="5">
-          <button class="btn btn-primary" (click)="showModalInsert()">Nova categoria</button>
+          <button class="btn btn-primary" (click)="categoryInsertService.showModalInsert()">Nova categoria</button>
         </td>
       </tr>
       <tr>
@@ -16,7 +17,7 @@
       </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let category of categories">
+    <tr *ngFor="let category of categories | paginate: {itemsPerPage: 5, currentPage: pagination.page, totalItems: pagination.totalItems}">
       <td>{{category.id}}</td>
       <td>{{category.name}}</td>
       <td>
@@ -25,17 +26,26 @@
       </td>
       <td>{{category.created_at.date | date: 'dd/MM/yyyy'}}</td>
       <td>
-        <a href="javascript:void(0)" (click)="showModalEdit(category.id)"><i class="fas fa-edit"></i></a> |
-        <a href="javascript:void(0)" (click)="showModalDelete(category.id)"><i class="fas fa-trash-alt"></i></a>
+        <a href="javascript:void(0)" (click)="categoryEditService.showModalEdit(category.id)"><i class="fas fa-edit"></i></a> |
+        <a href="javascript:void(0)" (click)="categoryDeleteService.showModalDelete(category.id)"><i class="fas fa-trash-alt"></i></a>
 
       </td>
     </tr>
     </tbody>
   </table>
+
+  <pagination-controls (pageChange)="pageChanged($event)"
+  previousLabel="Anterior"
+  nextLabel="Próximo"></pagination-controls>
 </div>
 
-<category-new-modal (onSuccess)="onInsertSuccess($event)" (onError)="onInsertError($event)"></category-new-modal>
+<category-new-modal
+        (onSuccess)="categoryInsertService.onInsertSuccess($event)"
+        (onError)="categoryInsertService.onInsertError($event)"></category-new-modal>
 <category-edit-modal [categoryId]="categoryId"
-                     (onSuccess)="onEditSuccess($event)" (onError)="onEditError($event)"></category-edit-modal>
+                     (onSuccess)="categoryEditService.onEditSuccess($event)"
+                     (onError)="categoryEditService.onEditError($event)"></category-edit-modal>
 
-<category-delete-modal [categoryId]="categoryId" (onSuccess)="onDeleteSuccess($event)" (onError)="onDeleteError($event)"></category-delete-modal>
+<category-delete-modal [categoryId]="categoryId"
+                       (onSuccess)="categoryDeleteService.onDeleteSuccess($event)"
+                       (onError)="categoryDeleteService.onDeleteError($event)"></category-delete-modal>
